# train-me

./: .gitignore  README.md  VoiceTraining.md  components.json  features.md  package-lock.json  package.json  plan.md  todo.md  tsconfig.json  tts_tags.md
.github/workflows/: release.yml
examples/: format.json  routine.md  rule.md  voice-config.json
plugins/tauri-plugin-fgmedia/: Cargo.toml  build.rs
plugins/tauri-plugin-fgmedia/android/: build.gradle.kts  consumer-rules.pro  settings.gradle
plugins/tauri-plugin-fgmedia/android/src/main/java/com/sylm54/train/fgmedia/: FgMediaPlugin.kt  MediaService.kt
plugins/tauri-plugin-fgmedia/permissions/autogenerated/: reference.md
plugins/tauri-plugin-fgmedia/permissions/autogenerated/commands/: start_media_service.toml  stop_media_service.toml  update_media_state.toml
plugins/tauri-plugin-fgmedia/permissions/schemas/: schema.json
plugins/tauri-plugin-fgmedia/src/: commands.rs  lib.rs
src/: App.css  App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_db.rs  audio_renderer.rs  bash.rs  builtins.rs  chastity.rs  default_hypno_planner_prompt.md  default_hypno_writer_prompt.md  default_main_agent_prompt.md  example_onnx.rs  expression.rs  helper.rs  inventory.rs  lib.rs  main.rs  manifest.rs  model_downloader.rs  package_import.rs  render_notify.rs  sounds.rs  tag_parser.rs
src/components/: AppShell.tsx  MarkdownBody.tsx  Sidebar.tsx
src/components/ai-elements/: message.tsx  prompt-input.tsx
src/lib/: activity.ts  agent-events.ts  agent.ts  features.ts  links.ts  manifestPlayer.ts  notifications.ts  packages.ts  prompts.ts  schedule-routines.ts  settings.ts  subagents.ts  tools.ts  types.ts  use-routine-notifier.ts  utils.ts  views.ts
src/lib/voice/: audio.ts  config.ts  dsp.ts  index.ts  registry.ts  types.ts
src/lib/voice/trackers/: genderspace.tsx  intonation.tsx  loudness.tsx  pitch.tsx  resonance.tsx  shared.tsx  weight.tsx
src/views/: ActivityView.tsx  ChastityView.tsx  ChatView.tsx  ConditioningView.tsx  InventoryView.tsx  JournalView.tsx  OnboardingView.tsx  PlaceholderView.tsx  RoutinesView.tsx  RulesView.tsx  SettingsView.tsx  TtsView.tsx  VoiceTrainingView.tsx
