[package]
name = "train-me"
version = "0.4.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "train_me_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Android-aware filesystem access. Needed so package imports can read
# the `content://` URIs returned by the Android file picker — those are
# not real filesystem paths and can't be opened with `std::fs`.
tauri-plugin-fs = "2"
tauri-plugin-android-fs = "28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

ort = { version = "2.0.0-rc.11", features = ["download-binaries", "ndarray", "xnnpack"] }

# Array processing (like NumPy)
ndarray = { version = "0.17.2", features = ["rayon"] }
rand = "0.8"
rand_distr = "0.4"

# Parallel processing
rayon = "1.10"

# Audio processing
hound = "3.5"
rustfft = "6.2"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Unicode normalization
unicode-normalization = "0.1"

# Regular expressions
regex = "1.10"

# System calls
libc = "0.2"
jni = "0.21"
android_logger = "0.13"
log = "0.4"
once_cell = "1.19"

# HTTP client for model downloads
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# XML parsing for TTS tags
quick-xml = "0.37"

# Date/time for track naming
chrono = { version = "0.4", features = ["serde"] }

# Singleton state management
parking_lot = "0.12"

# SQLite for inventory/activity logs
rusqlite = { version = "0.31", features = ["bundled"] }

# Force aegis (a transitive dep of bashkit's `sqlite` → turso_core) to use
# its pure-Rust backend. aegis's build script otherwise compiles C with
# `cc::Build::prefer_clang_cl_over_msvc(true)`, which picks up the Android
# NDK `clang-cl` found on PATH in this dev environment and fails on
# `<errno.h>`. The `pure-rust` feature switches to a Rust AES backend
# (still AES-NI accelerated on x86_64) and skips the C build entirely.
aegis = { version = "0.9", features = ["pure-rust"] }

# Bash sandbox for the agent. The `sqlite` feature enables the embedded
# Turso-backed `sqlite`/`sqlite3` builtin so the agent can query databases
# inside its sandbox directly.
bashkit = { version = "0.9", features = ["realfs", "sqlite"] }

# Async runtime required by bashkit
tokio = { version = "1", features = ["full"] }

# ZIP archive support for package imports
zip = "2"

# Content hashing for manifest staleness checks
sha2 = "0.10"

# Temp directory for extracting imported packages
tempfile = "3"
tauri-plugin-notification = "2.3.3"
cron = "0.16.0"

[dev-dependencies]
tempfile = "3"
