[package]
name = "tauri-plugin-fgmedia"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Android foreground media service for Tauri (keeps audio alive when backgrounded)."
links = "tauri-plugin-fgmedia"
build = "build.rs"

[lib]
name = "tauri_plugin_fgmedia"
path = "src/lib.rs"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2", default-features = false }
serde = "1"
serde_json = "1"
log = "0.4"

[features]
default = []
